# msu_cpp_autumn_2019

./: makefile  sum_by_cols.cpp  sum_by_rows.cpp
homework/Serebryakova/01/: CMakeLists.txt  calc  calc.cpp  makefile  test.py
homework/Serebryakova/02/: CMakeLists.txt  allocator.cpp  allocator.h  main.cpp  makefile
homework/Serebryakova/03/: CMakeLists.txt  a.out  header.h  makefile  matrix  matrix.cpp  tests.cpp
homework/Serebryakova/04/: CMakeLists.txt  bigInt.cpp  bigInt.h  main.cpp  makefile
homework/Serebryakova/05/: CMakeLists.txt  main.cpp  makefile  serializer.h
homework/Serebryakova/06/: format.h  main.cpp  makefile
homework/Serebryakova/07/: makefile
homework/Serebryakova/07/07/: main.cpp  vector.h
homework/Serebryakova/07/07.xcodeproj/: project.pbxproj
homework/Serebryakova/07/07.xcodeproj/project.xcworkspace/xcuserdata/sonyaserebryakova.xcuserdatad/: UserInterfaceState.xcuserstate
homework/Serebryakova/08/08/: ThreadPool.h  a.out  main.cpp  makefile
homework/Serebryakova/08/08.xcodeproj/: project.pbxproj
homework/Serebryakova/08/08.xcodeproj/project.xcworkspace/xcuserdata/sonyaserebryakova.xcuserdatad/: UserInterfaceState.xcuserstate
homework/Serebryakova/09/09/: a.out  main.cpp  makefile  prog  sort.cpp
homework/Serebryakova/09/09.xcodeproj/: project.pbxproj
homework/Serebryakova/09/09.xcodeproj/project.xcworkspace/xcuserdata/sonyaserebryakova.xcuserdatad/: UserInterfaceState.xcuserstate
